building site out

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,9 @@
 body {
     background-color: blue;
     margin: 0px;
-    padding-left;
-} 
+    padding-left:
+}
+
 header {
-background-color: blueviolet
-height: 100px    
-
-
+    background-color: blueviolet height: 100px
 }
