--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,15 @@ body {
 header {
     background-color: blueviolet height: 100px
 }
+h1 {
+    float: left;
+    margin-left: 20px;
+    margin-right: 50px;
+    color: red;
+    text-shadow: 5px 5px 5px white;
+    }
+    
+    nav {
+      width: 40%;
+    }
+    
