Building out site

--- a/style.css
+++ b/style.css
@@ -14,7 +14,9 @@ h1 {
     color: red;
     text-shadow: 5px 5px 5px white;
     }
-    
+    <section class= "lower">  
+    </section> 
+
     nav {
       width:140%;
     }
