--- a/style.css
+++ b/style.css
@@ -15,6 +15,15 @@ h1 {
     color: red;
     text-shadow: 5px 5px 5px white;
 }
+h2 {
+    float: left
+    color: red;
+    text-shadow: 5px 5px 5px white;
+}
+img  { 
+     width: auto; 
+     height: auto;
+}
 
 <section class="lower"></section>nav {
     width: 140%;
