--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ h2 {
     text-shadow: 5px 5px 5px white;
 }
 img  { 
-     width: auto; 
-     height: auto;
+     width: 150px; 
+     height: 150px;
 }
 
 <section class="lower"></section>nav {
